Transpose and pivot tables and generate boxplots

--- a/Stroop_effect_Analysis.htm
+++ b/Stroop_effect_Analysis.htm
@@ -1608,7 +1608,12 @@ var _ie64 = _info.indexOf("x64") > 0
 //-->
 </script>
 
-<a name="IDX6"></a>
+<a name="IDX"></a>
+<table class="systitleandfootercontainer" width="100%" cellspacing="1" cellpadding="1" rules="none" frame="void" border="0" summary="Page Layout">
+<tr>
+<td class="c systemtitle">Statistical Analysis of Stroop Effect</td>
+</tr>
+</table><br>
 <table width="100%" style=" border: 0px solid #000000; border-spacing: 0px;" cellspacing="0" cellpadding="0" rules="none" frame="void">
 <tr>
 <td class="l usertext">The Stroop effect is a demonstration of the phenomenon that the brain&#39;s reactiontime slows down when it has to deal with conflicting information. This slowedreaction time happens because of interference, or a processing delay caused bycompeting or incompatible functions in the brain. The effect became widely knownafter John Ridley Stroop, an American psychologist, published a paper on it in1935, but it had been studied by several other researchers before Stroop.[referene]In a Stroop task, participants are presented with a list of words, with eachword displayed in a color of ink. The participant’s task is to say out loud thecolor of the ink in which the word is printed. The task has two conditions:a congruent words condition, and an incongruent words condition. In thecongruent words condition, the words being displayed are color words whosenames match the colors in which they are printed: for example RED, BLUE.In the incongruent words condition, the words displayed are color wordswhose names do not match the colors in which they are printed.</td>
@@ -1620,7 +1625,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </tr>
 </table>
 <div class="branch">
-<a name="IDX7"></a>
+<a name="IDX1"></a>
 <div>
 <div class="l paragraph">The following word is styled; <span class="c" style=" color: #800080; font-weight: bold;">HERE</span><br/>
 <br/>
@@ -1631,7 +1636,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX8"></a>
+<a name="IDX2"></a>
 <div>
 <div align="center">
 <table class="table" cellspacing="0" cellpadding="5" rules="all" frame="box" bordercolor="#C1C1C1" summary="Procedure Print: Data Set STROOP.STROOP_DATA">
@@ -1750,7 +1755,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX9"></a>
+<a name="IDX3"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot.png" style=" height: 480px; width: 640px;" border="0" class="c">
@@ -1760,7 +1765,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX10"></a>
+<a name="IDX4"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot1.png" style=" height: 480px; width: 640px;" border="0" class="c">
@@ -1770,10 +1775,20 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX11"></a>
+<a name="IDX5"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot2.png" style=" height: 480px; width: 640px;" border="0" class="c">
+</div>
+</div>
+<br>
+</div>
+<div class="branch">
+<p style="page-break-after: always;"><br/></p><hr size="3"/>
+<a name="IDX6"></a>
+<div>
+<div  class="c">
+<img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot3.png" style=" height: 480px; width: 640px;" border="0" class="c">
 </div>
 </div>
 <br>
