Creating a analysis report

--- a/Stroop_effect_Analysis.htm
+++ b/Stroop_effect_Analysis.htm
@@ -1608,7 +1608,7 @@ var _ie64 = _info.indexOf("x64") > 0
 //-->
 </script>
 
-<a name="IDX"></a>
+<a name="IDX11"></a>
 <table class="systitleandfootercontainer" width="100%" cellspacing="1" cellpadding="1" rules="none" frame="void" border="0" summary="Page Layout">
 <tr>
 <td class="c systemtitle">Statistical Analysis of Stroop Effect</td>
@@ -1625,7 +1625,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </tr>
 </table>
 <div class="branch">
-<a name="IDX1"></a>
+<a name="IDX12"></a>
 <div>
 <div class="l paragraph">The following word is styled; <span class="c" style=" color: #800080; font-weight: bold;">HERE</span><br/>
 <br/>
@@ -1634,9 +1634,14 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <br>
 </div>
+<table width="100%" style=" border: 0px solid #000000; border-spacing: 0px;" cellspacing="0" cellpadding="0" rules="none" frame="void">
+<tr>
+<td class="l usertext">Folowwing table shows the first 10 records of the dataset</td>
+</tr>
+</table>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX2"></a>
+<a name="IDX13"></a>
 <div>
 <div align="center">
 <table class="table" cellspacing="0" cellpadding="5" rules="all" frame="box" bordercolor="#C1C1C1" summary="Procedure Print: Data Set STROOP.STROOP_DATA">
@@ -1691,61 +1696,123 @@ var _ie64 = _info.indexOf("x64") > 0
 <td class="r data">14.48</td>
 <td class="r data">26.282</td>
 </tr>
+</tbody>
+</table>
+</div>
+</div>
+<br>
+</div>
+<table width="100%" style=" border: 0px solid #000000; border-spacing: 0px;" cellspacing="0" cellpadding="0" rules="none" frame="void">
 <tr>
-<td class="r data">22.328</td>
-<td class="r data">24.524</td>
+<td class="l usertext">Some descriptive statistics of the dataset are given below</td>
+</tr>
+</table>
+<div class="branch">
+<p style="page-break-after: always;"><br/></p><hr size="3"/>
+<a name="IDX14"></a>
+<div>
+<div align="center">
+<table class="table" cellspacing="0" cellpadding="5" rules="all" frame="box" bordercolor="#C1C1C1" summary="Procedure Means: Summary statistics">
+<colgroup>
+<col>
+</colgroup>
+<colgroup>
+<col>
+<col>
+<col>
+<col>
+<col>
+<col>
+<col>
+<col>
+</colgroup>
+<thead>
+<tr>
+<th class="l b header" scope="col">Variable</th>
+<th class="r b header" scope="col">N</th>
+<th class="r b header" scope="col">Mean</th>
+<th class="r b header" scope="col">Std Dev</th>
+<th class="r b header" scope="col">Median</th>
+<th class="r b header" scope="col">Minimum</th>
+<th class="r b header" scope="col">Maximum</th>
+<th class="r b header" scope="col">Lower Quartile</th>
+<th class="r b header" scope="col">Upper Quartile</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th class="l stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<th class="l data top_stacked_value">Incongruent</th>
 </tr>
 <tr>
-<td class="r data">15.298</td>
-<td class="r data">18.644</td>
+<th class="l data bottom_stacked_value">Congruent</th>
+</tr>
+</table></th>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">24</td>
 </tr>
 <tr>
-<td class="r data">15.073</td>
-<td class="r data">17.51</td>
+<td class="r data bottom_stacked_value">24</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">22.016</td>
 </tr>
 <tr>
-<td class="r data">16.929</td>
-<td class="r data">20.33</td>
+<td class="r data bottom_stacked_value">14.051</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">4.797</td>
 </tr>
 <tr>
-<td class="r data">18.2</td>
-<td class="r data">35.255</td>
+<td class="r data bottom_stacked_value">3.559</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">21.018</td>
 </tr>
 <tr>
-<td class="r data">12.13</td>
-<td class="r data">22.158</td>
+<td class="r data bottom_stacked_value">14.357</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">15.687</td>
 </tr>
 <tr>
-<td class="r data">18.495</td>
-<td class="r data">25.139</td>
+<td class="r data bottom_stacked_value">8.630</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">35.255</td>
 </tr>
 <tr>
-<td class="r data">10.639</td>
-<td class="r data">20.429</td>
+<td class="r data bottom_stacked_value">22.328</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">18.693</td>
 </tr>
 <tr>
-<td class="r data">11.344</td>
-<td class="r data">17.425</td>
+<td class="r data bottom_stacked_value">11.712</td>
+</tr>
+</table></td>
+<td class="r stacked_cell data"><table width="100%" border="0" cellpadding="5" cellspacing="0">
+<tr>
+<td class="r data top_stacked_value">24.209</td>
 </tr>
 <tr>
-<td class="r data">12.369</td>
-<td class="r data">34.288</td>
+<td class="r data bottom_stacked_value">16.398</td>
 </tr>
-<tr>
-<td class="r data">12.944</td>
-<td class="r data">23.894</td>
-</tr>
-<tr>
-<td class="r data">14.233</td>
-<td class="r data">17.96</td>
-</tr>
-<tr>
-<td class="r data">19.71</td>
-<td class="r data">22.058</td>
-</tr>
-<tr>
-<td class="r data">16.004</td>
-<td class="r data">21.157</td>
+</table></td>
 </tr>
 </tbody>
 </table>
@@ -1753,9 +1820,14 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <br>
 </div>
+<table width="100%" style=" border: 0px solid #000000; border-spacing: 0px;" cellspacing="0" cellpadding="0" rules="none" frame="void">
+<tr>
+<td class="l usertext">The distribution of variables in the Stroop effect datasetare shown in the following histograms and the density plots.  </td>
+</tr>
+</table>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX3"></a>
+<a name="IDX15"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot.png" style=" height: 480px; width: 640px;" border="0" class="c">
@@ -1765,7 +1837,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX4"></a>
+<a name="IDX16"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot1.png" style=" height: 480px; width: 640px;" border="0" class="c">
@@ -1775,7 +1847,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX5"></a>
+<a name="IDX17"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot2.png" style=" height: 480px; width: 640px;" border="0" class="c">
@@ -1785,7 +1857,7 @@ var _ie64 = _info.indexOf("x64") > 0
 </div>
 <div class="branch">
 <p style="page-break-after: always;"><br/></p><hr size="3"/>
-<a name="IDX6"></a>
+<a name="IDX18"></a>
 <div>
 <div  class="c">
 <img alt="The SGPlot Procedure" src="E:\OneDrive_gmail\OneDrive\Dropbox_transfers\Udacity\Nano_Degree_Data_analysis\Project_8_Statistics\Stroop_effect_project\SGPlot3.png" style=" height: 480px; width: 640px;" border="0" class="c">
